--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ cachetools==5.3.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
 exceptiongroup==1.2.0
-google-ai-generativelanguage==0.4.0
+google-genai==1.0.0
 google-api-core==2.17.0
 google-auth==2.27.0
 google-generativeai==0.3.2
