Feat: Use a data directory for persistent storage
This commit introduces a 'data' directory to consolidate all application data, such as the database and conversation pickles. This approach simplifies data management and improves the Docker configuration.

Changes include:
- Created a 'data' directory for all persistent data.
- Updated 'docker-compose.yml' to mount the 'data' directory as a volume.
- Modified 'main.py' to use the new database path within the 'data' directory.
- Updated '.gitignore' to ignore the 'data' directory.
- Updated 'Dockerfile' to create the 'data' directory.
- Updated 'README.md' and 'INSTALLATION.md' to reflect the new data directory structure.

This change ensures that all application data is stored in a single, persistent location, making it easier to manage and back up.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     build: .
     container_name: geminibot
     volumes:
-      - ./conversations_data.db:/usr/src/app/conversations_data.db
+      - ./data:/usr/src/app/data
     restart: unless-stopped
