--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cachetools==6.2.4
 certifi==2025.11.12
 charset-normalizer==3.4.4
 exceptiongroup==1.3.1
-google-genai
+google-generativeai==0.5.4
 google-api-core
 google-auth
 googleapis-common-protos
