refactor: Enable multi-turn image conversations and improve error handling
- Refactored  to support multi-turn image conversations by modifying  to accept an image and  to handle optional images.
- Updated  to use the refactored  for multi-turn image conversations and set a default prompt for empty captions.
- Implemented  for continuing chat about an image.
- Added a generic rate limit error message for API quota exceeded errors.
- Added import for  exception to  for graceful message deletion.
- Added resource cleanup for image buffer and object in .
- Added  to .

--- a/.gitignore
+++ b/.gitignore
@@ -149,6 +149,9 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# conversation persistence
+conversation_persistence
+
 # pytype static type analyzer
 .pytype/
 
